# prompt_verse

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
docker/: app.Dockerfile  worker.Dockerfile
src/: __init__.py  main.py
src/api/: deps.py
src/api/v1/: api.py
src/api/v1/endpoints/: health.py  simulation.py
src/core/: celery_app.py  config.py  database.py  redis.py
src/models/: __init__.py  base.py  simulation.py
src/schemas/: simulation.py
src/workers/: tasks.py
tests/: conftest.py
tests/api/: test_health.py
tests/workers/: test_tasks.py
