[tool.poetry]
name = "omniverse-ai"
version = "0.1.0"
description = "OmniVerse AI: The Business Consciousness Engine"
authors = ["OmniVerse AI Architect <architect@omniverse.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
celery = "^5.4.0"
redis = "^5.0.6"
openai = "^1.35.3"
instructor = "^1.3.3"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pyrefly]
search-path = ["."]
python-interpreter-path = "c:\\Users\\Dijo Giftson\\venv\\Scripts\\python.exe"
site-package-path = ["c:\\Users\\Dijo Giftson\\venv\\Lib\\site-packages"]


